footer copyright row alignment fix

--- a/Content/sites/enterprises/assets/css/footer.css
+++ b/Content/sites/enterprises/assets/css/footer.css
@@ -417,7 +417,11 @@ a.footer__map-link:hover .footer__hover-icon,
 .footer__copyright {
   justify-content: space-between;
   font-size: 1vw;
-  justify-content: flex-start;
+  justify-content: flex-end;
+}
+
+.footer__copyright--left{
+  margin-right: auto;
 }
 
 @media screen and (max-width: 850px) {
